# K-NN-with-vantage-point-tree

./: .gitignore  CMakeLists.txt  README.md
data/: README.md
include/: Queue.h  hybrid_mpi.h  mixed_tree.h  open_mp_tree.h  parallel_vp_tree.h  search_knn.h  serial_vp_tree.h  utils.h
scripts/: README.md  create_data.py  demo_script.sh  evaluate_data.py  find_t_script.sh  mixed_plot.py  ploting_script.py  requirements.txt  run_script.sh  test.txt
scripts/data_creation_script/: exp_d_var.sh  exp_n_var.sh  norm_d_var.sh  norm_n_var.sh  uni_d_var.sh  uni_n_var.sh
src/: Queue.c  hybrid_mpi.c  main_cpu_program.c  mixed_tree.c  open_mp_tree.c  parallel_vp_tree.c  search_knn.c  serial_vp_tree.c  utils.c
tests/: CMakeLists.txt
tests/src/: utils_test.cpp
